[package]
name = "markross-down"
version = "0.0.1"
edition = "2021"
description = "Terminal-native Markdown editor with hybrid text/graphics rendering"
repository = "https://github.com/Bldg-7/markross-down"
license = "MIT OR Apache-2.0"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream", "bracketed-paste"] }
ropey = "1.6"
anyhow = "1"
thiserror = "2"
unicode-width = "0.2"

[profile.release]
lto = "thin"
codegen-units = 1
